
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int fprintf (int ,char*,char*) ;
 int sprintf (char*,char*,int,int,int,int) ;
 int stderr ;

void textcolor(int attr, int text, int bg)
{ char command[13];


        sprintf(command, "%c[%d;%d;%dm", 0x1B, attr, text + 30, bg + 40);
        fprintf(stderr, "%s", command);
}
